frontend/test/should_pass/param_006.grg
rule r : (Node) {
  n : Node;
  modify {
    return(n);
  }
}

