frontend/test/should_fail/exec_034.grg
rule r(var i:int) {
  n:Node;
  modify{
    exec(r(n));   // node instead of integer
  }
}
